# adeleg

./: .gitignore  Cargo.toml  Main.cs  README.md  adeleg.csproj  adeleg.sln  templates.json
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
adeleg/: Cargo.toml  adeleg.rc  build.rs  builtin_delegations.json
adeleg/src/: connection.rs  control.rs  delegations.rs  engine.rs  error.rs  explicit_ace.rs  gui.rs  main.rs  schema.rs  search.rs  security_descriptor.rs  utils.rs
authz/: Cargo.toml
authz/src/: ace.rs  acl.rs  error.rs  guid.rs  lib.rs  security_descriptor.rs  serial.rs  sid.rs  utils.rs
engine/: Config.cs  Engine.cs  Result.cs  ResultLocation.cs  ResultTrustee.cs  Utils.cs
engine/connector/: IConnector.cs  LdapLiveConnector.cs  OradadConnector.cs
gui/: AddExplicitDomainDialog.Designer.cs  AddExplicitDomainDialog.cs  AddExplicitDomainDialog.resx  DataSourceDialog.Designer.cs  DataSourceDialog.cs  DataSourceDialog.resx  RichTextBoxPrinter.cs  RichTextDataGridViewColumn.cs  TreeWindow.Designer.cs  TreeWindow.cs  TreeWindow.resx
src/: connection.rs  error.rs  main.rs  schema.rs  search.rs  utils.rs
winldap/: Cargo.toml
winldap/src/: connection.rs  control.rs  error.rs  lib.rs  search.rs  utils.rs
