[package]
name = "adeleg"
version = "1.1.0"
edition = "2021"
authors = ["Aurélien Bordes <aurelien.bordes@ssi.gouv.fr>", "Matthieu Buffet <matthieu.buffet@ssi.gouv.fr>"]
description = "An Active Directory delegation management tool"
repository = "https://github.com/mtth-bfft/adeleg"

[dependencies]
authz = { path = "../authz", features = ["serial"] }
winldap = { path = "../winldap" }
clap = "4.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
csv = "1.1.6"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Networking_ActiveDirectory",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_Foundation",
]

[build-dependencies]
winres = "0.1.12"