[package]
name = "authz"
version = "0.1.0"
edition = "2018"
authors = ["Aurélien Bordes <aurelien.bordes@ssi.gouv.fr>", "Matthieu Buffet <matthieu.buffet@ssi.gouv.fr>"]

[dependencies]
serde = { version = "1.0.157", optional = true }

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
]

[features]
serial = ["serde"]