[package]
name = "winldap"
version = "0.1.0"
edition = "2021"
authors = ["Aurélien Bordes <aurelien.bordes@ssi.gouv.fr>", "Matthieu Buffet <matthieu.buffet@ssi.gouv.fr>"]

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Networking_Ldap",
    "Win32_Foundation",
    "Win32_System_Rpc",
]